# ticker-intel

./: .env
.github/workflows/: ci.yml
ticker-intel/: .gitignore  pyproject.toml
ticker-intel/src/ticker_intel/:   .pub  __init__.py  cli.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  fetcher.py  models.py  searcher.py  text.py
ticker-intel/tests/: test_fetcher.py  test_searcher.py  test_smoke.py  test_text.py
