[project]
name = "ticker-intel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
ticker-intel = "ticker_intel.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "ruff>=0.14.9",
]

